After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 330686 - same songs played after reading a playlist
same songs played after reading a playlist
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
0.9.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
: 580260 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2006-02-10 16:24 UTC by Baptiste Mille-Mathias
Modified: 2015-03-14 12:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Correction to shuffle mode (1.44 KB, patch)
2014-09-25 06:42 UTC, charboma38
committed Details | Review

Description Baptiste Mille-Mathias 2006-02-10 16:24:41 UTC
Rhythmbox 0.9.3.1

- I read one of the new playlist provided by default (top favorites songs), I let rb play all the tracks in random order.
- After rb read all the playlist, the playback stopped.
- I read 5 minutes Virgin Radio in radio source (don't know if it is relevant or not, but could be)
- I launched the Library in random order, Rhythmbox started to play one of the songs stored in the previous playlist (I thought it was a coincidence), I press [Next] to zap to another song, and it was another song of the previous playlist, I pressed [Next] and I was another songs of the playlist. (not finishing here ...;)
- I double-cliked on a song to play it, after it was played, a song from the playlist was choose by rhythmbox ('AAAAahaaaaa !!!), I choose another song, after been played, another song from the playlist was played.

So I assume there is a problem somewhere.
Comment 1 Baptiste Mille-Mathias 2006-02-10 16:33:00 UTC
damn fingers
Comment 2 James "Doc" Livingston 2006-03-02 11:20:46 UTC
If this using shuffle, shuffle+repeat?
Comment 3 Baptiste Mille-Mathias 2006-08-07 10:44:14 UTC
I assume that was only shuffle, but it was months ago, and I never saw that you posted a comment :/
Comment 4 Jonathan W 2009-04-13 19:13:48 UTC
I've had this exact problem often too (that shuffle plays songs recently played on playlist).  It appears to still happen in 0.11.6 from debian unstable, but I'm not sure it doesn't seem to be 100% reproducible.
Comment 5 Jonathan W 2009-04-13 19:16:19 UTC
copy-edit:
I've also often had this exact problem (that shuffle plays songs recently played
on a playlist).  It appears to still happen in 0.11.6 from debian unstable, but it doesn't seem to be 100% reproducible.
Comment 6 Jonathan Matthew 2009-04-26 07:53:00 UTC
*** Bug 580260 has been marked as a duplicate of this bug. ***
Comment 7 Aaron Barany 2009-07-25 19:05:08 UTC
I am able to reliably reproduce this problem.

Enable shuffling and start playing a playlist. Pause playback, then begin playing another playlist. Pause playback once more, return to the original playlist (making sure to deselect all in the song list) and begin playing that playlist again. You will notice that the same song as before begins playing. However, all subsequent songs have a different order. This is on version 0.12.0.
Comment 8 charboma38 2014-09-25 06:42:49 UTC
Created attachment 287042 [details] [review]
Correction to shuffle mode
Comment 9 charboma38 2014-09-25 06:50:18 UTC
Review of attachment 287042 [details] [review]:

I reported the same problem here:
https://bugs.launchpad.net/ubuntu/+source/rhythmbox/+bug/1363609

Rhythmbox start playing the intersection of both old and new playlist.

I have a patch. Briefly:
The error comes from using 'rb_shuffle_entry_added' after 'rb_shuffle_entry_removed' since the first reverse modifications done by the latter.

I added a function that only adds entries without changing priv->entries_removed, this way the history is correctly modified.

Regards
Comment 10 Jonathan Matthew 2015-03-14 12:45:47 UTC
handle_query_model_changed already accesses the hash tables directly, so there's no need to add a new function to implement the change needed here.  I've pushed a modified version of this as commit 6a2f690.  Thanks for figuring this one out, and sorry it took so long to get around to applying your patch.
Comment 11 Jonathan Matthew 2015-03-14 12:46:29 UTC
Review of attachment 287042 [details] [review]:

.