shuffle: improve handling of query model changes

Ensure all entries are removed from the ordering, then all the
entries in the new query model are added randomly, rather than leaving
the ones common to both query models in place.  This distributes the
common entries better throughout the resulting play order.

Based on a patch from charboma38@gmail.com

https://bugzilla.gnome.org/show_bug.cgi?id=330686